whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "JSESIONID" 
spec:
  selector:
    app: whoami-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
