whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  ingressClassName: traficante1-traefik
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/whoami"
        backend:
          service:
            name: whoami-service
            port:
              number: 80
